--- a/trunk/res/layout/main.xml
+++ b/trunk/res/layout/main.xml
@@ -7,5 +7,7 @@
 
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:gravity="center" android:layout_weight="3" android:id="@+id/TextView" android:text="TextView"></TextView><TimePicker android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_weight="1" android:id="@+id/TimePicker"></TimePicker>
 
-<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_weight="0" android:id="@+id/btnOK" android:text="Set Schedule"></Button>
+<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0" android:id="@+id/btnOK" android:text="Set Schedule" android:layout_gravity="center"></Button>
+
+
 </LinearLayout>
