--- a/trunk/res/layout/main.xml
+++ b/trunk/res/layout/main.xml
@@ -12,19 +12,10 @@
 					android:layout_width="fill_parent"
 					android:orientation="vertical"
 					android:layout_weight="1" >				
-			<TextView android:layout_height="wrap_content" 
-						android:layout_gravity="center" 
-						android:gravity="center" 
-						android:layout_weight="3" 
-						android:id="@+id/TextView" 
-						android:text="TextView" android:layout_width="fill_parent">
-			</TextView>
-			<TextView android:layout_height="wrap_content" 
-						android:layout_weight="0.5" 
-						android:id="@+id/TextViewHint" 
-						android:layout_width="fill_parent" android:text="Set a power off time" android:gravity="bottom|center">
-			</TextView>
-	</LinearLayout>
+			
+			<AnalogClock android:layout_height="wrap_content" android:id="@+id/AnalogClock" android:layout_width="fill_parent" android:layout_weight="1" android:hand_hour="@drawable/appwidget_clock_hour" android:dial="@drawable/appwidget_clock_dial" android:hand_minute="@drawable/appwidget_clock_minute" android:layout_gravity="bottom|center"></AnalogClock>
+	
+</LinearLayout>
 	
 	<LinearLayout android:id="@+id/LinearLayout06" 
 					android:layout_height="fill_parent"
@@ -32,7 +23,7 @@
 					android:layout_width="fill_parent"
 					android:orientation="vertical"
 					android:layout_weight="1" >	
-					
+
 			<LinearLayout android:id="@+id/LinearLayout03" 
 							android:layout_gravity="center" 
 							android:layout_width="wrap_content" 
@@ -44,24 +35,17 @@
 								android:layout_width="fill_parent" 
 								android:layout_gravity="center_vertical|center">
 					</TimePicker>
+					
 			</LinearLayout>
 		
 			<LinearLayout android:id="@+id/LinearLayout04" 
-							android:layout_height="fill_parent"
-							android:layout_gravity="center"
-							android:layout_width="wrap_content"
-							android:layout_weight="3.5" >
+						android:layout_height="fill_parent"
+						android:layout_gravity="center"
+						android:layout_width="wrap_content" android:layout_weight="3">
 							
-					<Button android:layout_width="wrap_content" 
-							android:layout_height="wrap_content" 
-							android:id="@+id/btnOK" 
-							android:layout_gravity="center" android:text="Set Schedule">
-					</Button>
-					<Button android:layout_width="wrap_content" 
-							android:layout_height="wrap_content" 
-							android:id="@+id/btnCancel" 
-							android:layout_gravity="center" android:text=" UnSchedule ">
-					</Button>				
+					<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/CheckBox" android:text=" Set auto power off by above time "></CheckBox>
+
 			</LinearLayout>
+			
 	</LinearLayout>
 </LinearLayout>
