--- a/res/xml/proweroffwidget_provider.xml
+++ b/res/xml/proweroffwidget_provider.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:label="Reboot"
+    android:label="Poweroff"
     android:minWidth="32dp"
     android:minHeight="32dp"
     android:updatePeriodMillis="0"
